--- a/src/back-end/TrafficLayer/Services/TrafficAnalyticsService/K8s/k8s.traffic-analytics.secret.yaml
+++ b/src/back-end/TrafficLayer/Services/TrafficAnalyticsService/K8s/k8s.traffic-analytics.secret.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: trafficanalyticsapi-secret
+  name: traffic-analytics-secret
 type: Opaque
 stringData:
-  JWT_KEY: "Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km"
-  RABBITMQ_USERNAME: "rabbitmq"
-  RABBITMQ_PASSWORD: "rabbitmq123"
+  Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
+  Mongo__ConnectionString: mongodb://mongo:mongo123@detection-db:27017
+  PostgreSQL__ConnectionString: Host=traffic-analytics-db;Port=5432;Database=TrafficAnalyticsDB;Username=postgres;Password=postgres123
+  RabbitMQ__Username: rabbitmq
+  RabbitMQ__Password: rabbitmq123
