--- a/src/back-end/TrafficLayer/Services/TrafficLightControllerService/K8s/k8s.traffic-light-controller.config.yaml
+++ b/src/back-end/TrafficLayer/Services/TrafficLightControllerService/K8s/k8s.traffic-light-controller.config.yaml
@@ -1,17 +1,24 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: intersection-controller-config
+  name: traffic-light-controller-config
   namespace: uniwa-stls
 data:
-  # --- ASP.NET Core ---
   ASPNETCORE_ENVIRONMENT: "Development"
   ASPNETCORE_URLS: "http://+:8080"
   SERVICE_LAYER: "Traffic"
-  SERVICE_LEVEL: "Fog"
-  SERVICE_NAME: "Intersection Controller"
+  SERVICE_LEVEL: "Edge"
+  SERVICE_NAME: "Traffic Light Controller"
 
-  # --- Redis (Traffic Light Cache) ---
+  # Intersection Details
+  Intersection__Id: "1"
+  Intersection__Name: "Agiou Spyridonos"
+
+  # Traffic Light Details
+  TrafficLight__Id: "101"
+  TrafficLight__Name: "Agiou Spyridonos"
+
+  # TrafficLightCacheDB (Redis)
   Redis__TrafficLight__Host: "traffic-light-cache-db"
   Redis__TrafficLight__Port: "6379"
   Redis__TrafficLight__Password: ""
@@ -32,47 +39,30 @@ data:
   Redis__TrafficLight__KeyPrefix__LastCoordinatorSync: "traffic_light:{intersection}:last_sync"
   Redis__TrafficLight__KeyPrefix__Heartbeat: "traffic_light:{intersection}:{light}:heartbeat"
 
-  # --- Redis (Detection Cache) ---
-  Redis__Host: "detection-cache-db"
-  Redis__Port: "6379"
-  Redis__Password: ""
-  Redis__Database: "0"
-  Redis__Sensor__KeyPrefix__VehicleCount: "sensor:{intersection}.vehicle_count"
-  Redis__Sensor__KeyPrefix__PedestrianCount: "sensor:{intersection}.pedestrian_count"
-  Redis__Sensor__KeyPrefix__CyclistCount: "sensor:{intersection}.cyclist_count"
-  Redis__Detection__KeyPrefix__EmergencyDetections: "detection:{intersection}.emergency_vehicle_detected"
-  Redis__Detection__KeyPrefix__PublicTransportDetections: "detection:{intersection}.public_transport_detected"
-  Redis__Detection__KeyPrefix__IncidentDetections: "detection:{intersection}.incident_detected"
-
-  # --- CORS ---
+  # CORS
   Cors__AllowedOrigins: "http://localhost:5173,https://uniwa-stls.local"
   Cors__AllowedMethods: "GET,POST,PUT,PATCH,DELETE,OPTIONS"
   Cors__AllowedHeaders: "Content-Type,Authorization"
 
-  # --- JWT ---
+  # JWT
   Jwt__Issuer: "http://uniwa-stls-backend:8080"
   Jwt__Audience: "http://uniwa-stls-backend:8080"
 
-  # --- RabbitMQ ---
+  # RabbitMQ
+  ## Configuration
   RabbitMQ__Host: "rabbitmq"
   RabbitMQ__VirtualHost: "/"
   RabbitMQ__Port: "5672"
 
-  # --- Exchanges ---
-  RabbitMQ__Exchanges__Sensor: "SENSOR.EXCHANGE"
+  ## Exchanges
   RabbitMQ__Exchanges__Traffic: "TRAFFIC.EXCHANGE"
   RabbitMQ__Exchanges__Log: "LOG.EXCHANGE"
 
-  # --- Queues ---
-  RabbitMQ__Queues__Sensor__SensorCount: "sensor-2-intersection-controller.{intersection}.queue"
-  RabbitMQ__Queues__Sensor__DetectionEvents: "detection-2-intersection-controller.{intersection}.queue"
-  RabbitMQ__Queues__Traffic__LightSchedule: "coordinator-2-intersection-controller.{intersection}.queue"
+  ## Queues
+  RabbitMQ__Queues__Traffic__LightControl: "intersection-controller-2-traffic-light-controller.{intersection}.{light}.queue"
 
-  # --- Routing Keys ---
-  RabbitMQ__RoutingKeys__Sensor__SensorCount: "sensor.count.#"
-  RabbitMQ__RoutingKeys__Sensor__DetectionEvents: "sensor.detection.#"
-  RabbitMQ__RoutingKeys__Traffic__LightSchedule: "traffic.light.schedule.*"
-  RabbitMQ__RoutingKeys__Traffic__PriorityCount: "priority.count.{intersection}.{type}"
-  RabbitMQ__RoutingKeys__Traffic__PriorityDetection: "priority.detection.{intersection}.{event}"
-  RabbitMQ__RoutingKeys__Traffic__LightControl: "traffic.light.control.{intersection}.{light}"
-  RabbitMQ__RoutingKeys__Log__IntersectionController: "log.{layer}.{service}.{type}"
+  ## Routing Keys
+  ### Consume
+  RabbitMQ__RoutingKeys__Traffic__LightControl: "traffic.light.control.#"
+  ### Publish
+  RabbitMQ__RoutingKeys__Log__LightController: "log.{layer}.{service}.{type}"
