--- a/src/back-end/TrafficLayer/Services/TrafficLightCoordinatorService/K8s/k8s.traffic-light-coordinator.secret.yaml
+++ b/src/back-end/TrafficLayer/Services/TrafficLightCoordinatorService/K8s/k8s.traffic-light-coordinator.secret.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: trafficlightcoordinatorapi-secret
+  name: traffic-light-coordinator-secret
 type: Opaque
 stringData:
-  JWT_KEY: "Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km"
-  RABBITMQ_USERNAME: "rabbitmq"
-  RABBITMQ_PASSWORD: "rabbitmq123"
+  Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
+  MSSQL__ConnectionString: "Server=traffic-light-db,1433;Database=TrafficLightDB;User Id=sa;Password=MyPass@word;TrustServerCertificate=True;"
+  RabbitMQ__Username: rabbitmq
+  RabbitMQ__Password: rabbitmq123
