--- a/src/back-end/UserLayer/Services/UserService/K8s/k8s.user-api.secret.yaml
+++ b/src/back-end/UserLayer/Services/UserService/K8s/k8s.user-api.secret.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: userapi-secret
+  name: user-api-secret
 type: Opaque
 stringData:
-  JWT_KEY: "Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km"
-  RABBITMQ_USERNAME: "rabbitmq"
-  RABBITMQ_PASSWORD: "rabbitmq123"
+  Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
+  MSSQL__ConnectionString: Server=user-db,1433;Database=UserDB;User Id=sa;Password=MyPass@word;TrustServerCertificate=True
+  RabbitMQ__Username: rabbitmq
+  RabbitMQ__Password: rabbitmq123
