--- a/src/back-end/LogLayer/Services/LogService/K8s/k8s.log-api.deployment.yaml
+++ b/src/back-end/LogLayer/Services/LogService/K8s/k8s.log-api.deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: log-api
+  name: log-api-depl
   namespace: uniwa-stls
   labels:
     app: log-api
