--- a/src/back-end/SensorLayer/Services/DetectionService/K8s/Deployment/k8s.detection-api.ekklisia.yaml
+++ b/src/back-end/SensorLayer/Services/DetectionService/K8s/Deployment/k8s.detection-api.ekklisia.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: detection-api-ekklisia
+  name: detection-api-ekklisia-depl
   namespace: uniwa-stls
   labels:
     app: detection-api-ekklisia
@@ -70,7 +70,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: detection-api-ekklisia
+  name: detection-api-ekklisia-svc
   namespace: uniwa-stls
 spec:
   type: ClusterIP
