--- a/src/back-end/TrafficLayer/Services/TrafficAnalyticsService/K8s/k8s.traffic-analytics.deployment.yaml
+++ b/src/back-end/TrafficLayer/Services/TrafficAnalyticsService/K8s/k8s.traffic-analytics.deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: traffic-analytics
+  name: traffic-analytics-depl
   namespace: uniwa-stls
   labels:
     app: traffic-analytics
