--- a/src/back-end/TrafficLayer/Services/TrafficAnalyticsService/K8s/k8s.traffic-analytics.service.yaml
+++ b/src/back-end/TrafficLayer/Services/TrafficAnalyticsService/K8s/k8s.traffic-analytics.service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: traffic-analytics
+  name: traffic-analytics-svc
   namespace: uniwa-stls
 spec:
   type: ClusterIP
