--- a/src/back-end/UserLayer/Services/NotificationService/K8s/k8s.notification-api.deployment.yaml
+++ b/src/back-end/UserLayer/Services/NotificationService/K8s/k8s.notification-api.deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: notification-api
+  name: notification-api-depl
   namespace: uniwa-stls
   labels:
     app: notification-api
