--- a/src/back-end/UserLayer/Services/NotificationService/K8s/k8s.notification-api.service.yaml
+++ b/src/back-end/UserLayer/Services/NotificationService/K8s/k8s.notification-api.service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: notification-api
+  name: notification-api-svc
   namespace: uniwa-stls
 spec:
   type: ClusterIP
