--- a/src/back-end/UserLayer/Services/UserService/K8s/k8s.user-api.deployment.yaml
+++ b/src/back-end/UserLayer/Services/UserService/K8s/k8s.user-api.deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: user-api
+  name: user-api-depl
   namespace: uniwa-stls
   labels:
     app: user-api
