--- a/src/back-end/LogLayer/Databases/LogDB/Mongo/K8s/k8s.log-db.pvc.yaml
+++ b/src/back-end/LogLayer/Databases/LogDB/Mongo/K8s/k8s.log-db.pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: rabbitmq-pvc
+  name: log-db-pvc
   namespace: uniwa-stls
 spec:
   accessModes:
