--- a/src/back-end/MessageLayer/RabbitMQ/K8s/k8s.rabbitmq.secret.yaml
+++ b/src/back-end/MessageLayer/RabbitMQ/K8s/k8s.rabbitmq.secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: rabbitmq-secret
+  namespace: uniwa-stls
 type: Opaque
 stringData:
   RABBITMQ_DEFAULT_USER: "rabbitmq"
