--- a/src/back-end/MessageLayer/RabbitMQ/K8s/k8s.rabbitmq.service.yaml
+++ b/src/back-end/MessageLayer/RabbitMQ/K8s/k8s.rabbitmq.service.yaml
@@ -1,18 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: rabbitmq
+  name: rabbitmq-svc
   namespace: uniwa-stls
-  labels:
-    app: rabbitmq
 spec:
   type: ClusterIP
   ports:
-    - name: amqp
-      port: 5672
+    - port: 5672
       targetPort: 5672
-    - name: management
-      port: 15672
+      name: amqp
+    - port: 15672
       targetPort: 15672
+      name: management
   selector:
     app: rabbitmq
