--- a/src/back-end/SensorLayer/Databases/DetectionCacheDB/Redis/K8s/k8s.detection-cache-db.pvc.yaml
+++ b/src/back-end/SensorLayer/Databases/DetectionCacheDB/Redis/K8s/k8s.detection-cache-db.pvc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: rabbitmq-pvc
+  name: detection-cache-db-pvc
   namespace: uniwa-stls
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 512Mi
   storageClassName: standard
