--- a/src/back-end/SensorLayer/Databases/DetectionDB/Mongo/K8s/k8s.detection-db.pvc.yaml
+++ b/src/back-end/SensorLayer/Databases/DetectionDB/Mongo/K8s/k8s.detection-db.pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: rabbitmq-pvc
+  name: detection-db-pvc
   namespace: uniwa-stls
 spec:
   accessModes:
