--- a/src/back-end/TrafficLayer/Databases/TrafficAnalyticsDB/PostgreSQL/K8s/k8s.traffic-analytics-db.pvc.yaml
+++ b/src/back-end/TrafficLayer/Databases/TrafficAnalyticsDB/PostgreSQL/K8s/k8s.traffic-analytics-db.pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: rabbitmq-pvc
+  name: traffic-analytics-db-pvc
   namespace: uniwa-stls
 spec:
   accessModes:
