--- a/src/back-end/UserLayer/Databases/UserDB/MSSQL/K8s/k8s.user-db.pvc.yaml
+++ b/src/back-end/UserLayer/Databases/UserDB/MSSQL/K8s/k8s.user-db.pvc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: rabbitmq-pvc
+  name: user-db-pvc
   namespace: uniwa-stls
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 2Gi
   storageClassName: standard
